don't worry about the public directory

--- a/themes/bare/layouts/index.html
+++ b/themes/bare/layouts/index.html
@@ -1,9 +1,6 @@
-<html>
-  <body>
-    <h1>Welcome!</h1>
+{{ define "main" }}
+<h1>Welcome!</h1>
 
-    <h2>{{ .Title }}</h2>
-    {{ .Content }}
-
-  </body>
-</html>
+<h2>{{ .Title }}</h2>
+{{ .Content }}
+{{ end }}
