--- a/themes/bare/layouts/_default/baseof.html
+++ b/themes/bare/layouts/_default/baseof.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,7 +6,7 @@
       {{ .Site.Title }}
     {{ end }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
+    <link rel="stylesheet" href="{{ "tufte.css" | absURL }}" />
   </head>
   <body class="w-100 sans-serif">
       <header class="fl w-20">
